--- a/themes/yelee/_config.yml
+++ b/themes/yelee/_config.yml
@@ -111,13 +111,20 @@ youyan:
   # 友言服务在 Web 环境下运行，普通本地环境无法查看，请部署后在线上测试。
 
 gitment:
-  on: true
+  on: false
   github_id: towavephone
   repo: towavephone.github.io
   client_id: c61abeb31906bb4a209d
   client_secret: fac8b9e40113945430e0ea638efdb96e7e0df9b5
   lazy: true
 
+gitalk:
+  on: true
+  clientID: c61abeb31906bb4a209d,
+  clientSecret: fac8b9e40113945430e0ea638efdb96e7e0df9b5,
+  repo: towavephone.github.io,
+  owner: towavephone,
+  distractionFreeMode: true
 # >>> Style Customisation 样式自定义 <<<
 
 # Background | 背景
