修复gitalk评论系统问题

--- a/themes/yelee/_config.yml
+++ b/themes/yelee/_config.yml
@@ -124,6 +124,7 @@ gitalk:
   clientSecret: fac8b9e40113945430e0ea638efdb96e7e0df9b5,
   repo: towavephone.github.io,
   owner: towavephone,
+  admin: ['towavephone'],
   distractionFreeMode: true
 # >>> Style Customisation 样式自定义 <<<
 
