--- a/themes/yelee/_config.yml
+++ b/themes/yelee/_config.yml
@@ -261,7 +261,7 @@ mathjax: true
 
 # Socail Share | 是否开启分享
 share: 
-  on: true
+  on: false
   baidu: true
   addthis: false
   addthis_pubid: "ra-56ff76c972fc0cf9"
