--- a/themes/yelee/_config.yml
+++ b/themes/yelee/_config.yml
@@ -261,9 +261,9 @@ mathjax: true
 
 # Socail Share | 是否开启分享
 share: 
-  on: false
-  baidu: true
-  addthis: false
+  on: true
+  baidu: false
+  addthis: true
   addthis_pubid: "ra-56ff76c972fc0cf9"
   ## Go to www.addthis.com/dashboard to get your pubid (in src of Code)
   ## and customize AddThis share buttons
