修改主页路径

--- a/themes/yelee/_config.yml
+++ b/themes/yelee/_config.yml
@@ -290,7 +290,7 @@ visit_counter:
 
 # GitHub Repo Widget
 # https://github.com/hustcc/GitHub-Repo-Widget.js
-github_widget: true
+github_widget: false
 
 # Progress Bar | 页面加载进度条
 # Demo: http://github.hubspot.com/pace/docs/welcome/
