--- a/package.json
+++ b/package.json
@@ -3,11 +3,13 @@
   "version": "0.0.0",
   "private": true,
   "hexo": {
-    "version": "3.4.1"
+    "version": "3.4.2"
   },
   "scripts": {
     "dev": "hexo s -p 80",
-    "prod": "hexo clean && hexo g && gulp && hexo d"
+    "prod": "hexo clean && hexo g && gulp",
+    "precommit": "yarn run prod",
+    "prepush": "hexo d"
   },
   "dependencies": {
     "gulp": "^3.9.1",
@@ -18,6 +20,7 @@
     "hexo": "^3.2.0",
     "hexo-blog-encrypt": "^2.0.2",
     "hexo-deployer-git": "^0.3.1",
+    "hexo-fs": "^0.2.2",
     "hexo-generator-archive": "^0.1.4",
     "hexo-generator-category": "^0.1.3",
     "hexo-generator-feed": "^1.2.2",
@@ -29,6 +32,7 @@
     "hexo-renderer-marked": "^0.3.0",
     "hexo-renderer-stylus": "^0.3.1",
     "hexo-server": "^0.2.0",
-    "hexo-wordcount": "^3.0.2"
+    "hexo-wordcount": "^3.0.2",
+    "husky": "^0.14.3"
   }
 }
