更改头像大小

--- a/themes/yelee/_config.yml
+++ b/themes/yelee/_config.yml
@@ -14,10 +14,10 @@ menu:
   关于我: /about/
 
 # Link to your avatar | 填写头像地址
-avatar: /resource/avatar.gif
+avatar: /resource/avatar.jpg
 
 # Small icon of Your site | 站点小图标地址
-favicon: /resource/avatar.gif
+favicon: /resource/avatar.jpg
 
 # Internationalization | 主题语言
 ## Change Language in SITE's _config.yml | 在站点配置中切换语言
