--- a/themes/yelee/_config.yml
+++ b/themes/yelee/_config.yml
@@ -274,7 +274,7 @@ baidu_site: gc3PldFwYc
 google_site: 
 
 # Fill in Google Analytics tracking ID, #e.g. UA-XXXXX-X
-google_analytics: 
+google_analytics: UA-98114394-2
 
 # 百度统计 http://sitecenter.baidu.com/sc-web/
 # 查看代码，填入 //hm.baidu.com/hm.js? 之后的内容
