--- a/package.json
+++ b/package.json
@@ -8,8 +8,11 @@
   "scripts": {
     "dev": "hexo s -p 80",
     "prod": "hexo clean && hexo g && gulp",
-    "precommit": "yarn prod",
-    "prepush": "hexo d"
+    "cm": "git-cz",
+    "commitmsg": "commitlint -e $GIT_PARAMS",
+    "prepush": "yarn prod && hexo d",
+    "precommit": "yarn changelog",
+    "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s -r 0"
   },
   "dependencies": {
     "gulp": "^3.9.1",
@@ -34,5 +37,17 @@
     "hexo-server": "^0.2.0",
     "hexo-wordcount": "^3.0.2",
     "husky": "^0.14.3"
+  },
+  "devDependencies": {
+    "@commitlint/cli": "^5.2.5",
+    "@commitlint/config-conventional": "^5.2.3",
+    "commitizen": "^2.9.6",
+    "conventional-changelog": "^1.1.7",
+    "cz-conventional-changelog": "^2.1.0"
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
   }
 }
