--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "cm": "git-cz",
     "commitmsg": "commitlint -e $GIT_PARAMS",
     "prepush": "yarn prod && hexo d",
-    "precommit": "yarn changelog && git add CHANGELOG.md",
+    "postcommit": "yarn changelog && git add CHANGELOG.md",
     "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s -r 0"
   },
   "dependencies": {
