feat: add computer network part 2

--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "hexo-renderer-marked": "^0.3.0",
     "hexo-renderer-stylus": "^0.3.1",
     "hexo-server": "^0.2.0",
+    "hexo-tag-aplayer": "^3.0.3",
     "hexo-wordcount": "^3.0.2",
     "husky": "^0.14.3"
   },
