--- a/_config.yml
+++ b/_config.yml
@@ -78,8 +78,11 @@ theme: Yelee
 ## Docs: https://hexo.io/docs/deployment.html
 deploy:
   type: git
-  repo: git@github.com:towavephone/towavephone.github.io.git
   branch: master
+  repo: 
+    github: git@github.com:towavephone/towavephone.github.io.git
+    coding: git@git.coding.net:towavephone/towavephone.coding.me.git
+    
 # live2d:
 #   model: miku # 模型名称 默认值: z16
 #   width: 150 # 宽度 默认值: 150
