--- a/themes/yelee/_config.yml
+++ b/themes/yelee/_config.yml
@@ -14,10 +14,10 @@ menu:
   关于我: /about/
 
 # Link to your avatar | 填写头像地址
-avatar: /img/avatar.png
+avatar: http://p6aicz9r2.bkt.clouddn.com/static/images/avatar.png?imageView2/2/h/230/format/webp/interlace/1/q/30
 
 # Small icon of Your site | 站点小图标地址
-favicon: /img/avatar.png
+favicon: http://p6aicz9r2.bkt.clouddn.com/static/images/avatar.png?imageView2/2/h/10/format/webp/interlace/1/q/10
 
 # Internationalization | 主题语言
 ## Change Language in SITE's _config.yml | 在站点配置中切换语言
@@ -131,15 +131,15 @@ gitalk:
 # Background | 背景
 ## "5": show images form bg-1.jpg to bg-5.jpg in `/yelee/source/background/`
 ## "5": 显示`/yelee/source/background/`文件夹中 bg-1.jpg 到 bg-5.jpg 这5张图片
-## "0": white-gray background | 淳朴灰白背景
-background_image: 7
+## "0": white-gray background | 随机颜色背景
+background_image: 0
 
 # Base Font Size | 字号调节
 base_font_size: 18  #px, 16 - 24
 
 ## General Color Scheme | 主题配色方案 
 ## 可用值 Value: yilia
-color_scheme: 
+color_scheme:
 
 highlight_style:
   on: true
@@ -186,7 +186,7 @@ jquery_ui: true
 # Max width of right cloumn | 限制右侧内容的宽带 
 limit_article_width: 
   on: true
-  max_width: 70 # em
+  max_width: 80 # em
 
 # >>> Small features | 小功能设置 <<<
 
