--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "gulp-minify-css": "^1.2.4",
     "gulp-uglify": "^3.0.0",
     "hexo": "^3.4.2",
-    "hexo-blog-encrypt": "^2.0.7",
+    "hexo-blog-encrypt": "2.0.2",
     "hexo-deployer-git": "^0.3.1",
     "hexo-fs": "^0.2.2",
     "hexo-generator-archive": "^0.1.4",
