--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "cm": "git-cz",
     "commitmsg": "commitlint -e $GIT_PARAMS",
     "prepush": "yarn prod && hexo d",
-    "postcommit": "yarn lint:markdown && yarn changelog && git add CHANGELOG.md",
+    "postcommit": "yarn lint:markdown && yarn changelog",
     "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s -r 0",
     "lint:markdown": "markdownlint --config ./.markdownlint.json ./source/_posts/*.md"
   },
