--- a/package.json
+++ b/package.json
@@ -8,9 +8,9 @@
   "scripts": {
     "dev": "hexo s -p 80",
     "prod": "hexo clean && hexo g && gulp",
+    "deploy": "hexo d",
     "cm": "git-cz",
     "commitmsg": "commitlint -e $GIT_PARAMS",
-    "prepush": "yarn prod && hexo d",
     "postcommit": "yarn lint:markdown && yarn changelog",
     "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s -r 0",
     "lint:markdown": "markdownlint --config ./.markdownlint.json ./source/_posts/*.md"
