--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   },
   "scripts": {
     "dev": "hexo s -p 80",
-    "prod": "hexo clean && hexo g && gulp",
+    "prod": "hexo clean && hexo g --debug && gulp",
     "deploy": "hexo d",
     "cm": "git-cz",
     "commitmsg": "commitlint -e $GIT_PARAMS",
@@ -17,26 +17,26 @@
   },
   "dependencies": {
     "gulp": "^3.9.1",
-    "gulp-htmlclean": "^2.7.15",
-    "gulp-htmlmin": "^3.0.0",
+    "gulp-htmlclean": "^2.7.22",
+    "gulp-htmlmin": "^4.0.0",
     "gulp-minify-css": "^1.2.4",
     "gulp-uglify": "^3.0.0",
-    "hexo": "^3.4.2",
+    "hexo": "^3.7.1",
     "hexo-blog-encrypt": "2.0.2",
     "hexo-deployer-git": "^0.3.1",
-    "hexo-fs": "^0.2.2",
-    "hexo-generator-archive": "^0.1.4",
+    "hexo-fs": "^0.2.3",
+    "hexo-generator-archive": "^0.1.5",
     "hexo-generator-category": "^0.1.3",
     "hexo-generator-feed": "^1.2.2",
-    "hexo-generator-index": "^0.2.0",
-    "hexo-generator-search": "^2.1.1",
+    "hexo-generator-index": "^0.2.1",
+    "hexo-generator-search": "^2.2.5",
     "hexo-generator-seo-friendly-sitemap": "^0.0.21",
     "hexo-generator-tag": "^0.2.0",
     "hexo-qiniu-sync": "^1.4.7",
-    "hexo-renderer-ejs": "^0.3.0",
-    "hexo-renderer-marked": "^0.3.0",
-    "hexo-renderer-stylus": "^0.3.1",
-    "hexo-server": "^0.2.0",
+    "hexo-renderer-ejs": "^0.3.1",
+    "hexo-renderer-marked": "^0.3.2",
+    "hexo-renderer-stylus": "^0.3.3",
+    "hexo-server": "^0.3.1",
     "hexo-tag-aplayer": "^3.0.3",
     "hexo-wordcount": "^3.0.2",
     "husky": "^0.14.3"
