--- a/.gitignore
+++ b/.gitignore
@@ -5,5 +5,6 @@ db.json
 /node_modules
 !./node_modules/hexo-generator-index/lib/generator.js
 !./node_modules/hexo-qiniu-sync/index.js
+!./node_modules/hexo-blog-encrypt/lib/blog-encrypt.js
 /public
 /.deploy*
