--- a/package.json
+++ b/package.json
@@ -20,11 +20,10 @@
     "gulp-htmlclean": "^2.7.22",
     "gulp-htmlmin": "^4.0.0",
     "gulp-minify-css": "^1.2.4",
-    "gulp-uglify": "^3.0.0",
+    "gulp-uglify-es": "^1.0.1",
     "hexo": "^3.7.1",
-    "hexo-blog-encrypt": "2.0.2",
+    "hexo-blog-encrypt": "^2.0.7",
     "hexo-deployer-git": "^0.3.1",
-    "hexo-fs": "^0.2.3",
     "hexo-generator-archive": "^0.1.5",
     "hexo-generator-category": "^0.1.3",
     "hexo-generator-feed": "^1.2.2",
