--- a/themes/yelee/_config.yml
+++ b/themes/yelee/_config.yml
@@ -280,8 +280,9 @@ google_analytics: false
 # 百度统计 http://sitecenter.baidu.com/sc-web/
 # 查看代码，填入 //hm.baidu.com/hm.js? 之后的内容
 # 500e7e771d9096699a8156ade66f7014
-baidu_tongji: false
-
+baidu_tongji: 500e7e771d9096699a8156ade66f7014
+baidu_auto_push: true
+qihu_auto_pass: true
 # 不蒜子网站计数设置
 # http://ibruce.info/2015/04/04/busuanzi/
 visit_counter:
