feat: fix hexo generate too slow and add post length

--- a/themes/yelee/_config.yml
+++ b/themes/yelee/_config.yml
@@ -290,6 +290,7 @@ visit_counter:
   site_visit: true
   page_visit: true
   site_word: true
+  post_length: true 
 
 # GitHub Repo Widget
 # https://github.com/hustcc/GitHub-Repo-Widget.js
