feat: update blog log and add code paste

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -41,7 +41,7 @@ deploy to gitlab:
     - build
   environment:
     name: gitlab
-    url: http://120.79.62.126
+    url: http://www.towavephone.com
     on_stop: stop deploy on gitlab
 
 stop deploy on gitlab:
