--- a/themes/yelee/_config.yml
+++ b/themes/yelee/_config.yml
@@ -122,7 +122,7 @@ gitalk:
   on: true
   clientID: c61abeb31906bb4a209d
   clientSecret: fac8b9e40113945430e0ea638efdb96e7e0df9b5
-  repo: towavephone.github.io
+  repo: HexoBlog
   owner: towavephone
   admin: ['towavephone']
   distractionFreeMode: true
