feat: reorganize file struct

--- a/_config.yml
+++ b/_config.yml
@@ -34,7 +34,7 @@ titlecase: false # Transform title into titlecase
 external_link: true # Open external links in new tab
 filename_case: 0
 render_drafts: false
-post_asset_folder: false
+post_asset_folder: true
 relative_link: false
 future: true
 highlight:
@@ -80,7 +80,7 @@ deploy:
   type: git
   branch: master
   repo: 
-    coding: git@git.coding.net:towavephone/towavephone.coding.me.git
+    coding: git@git.dev.tencent.com:towavephone/towavephone.coding.me.git
 # live2d:
 #   model: miku # 模型名称 默认值: z16
 #   width: 150 # 宽度 默认值: 150
